--- a/MyApplication/app/src/main/res/layout/activity_home.xml
+++ b/MyApplication/app/src/main/res/layout/activity_home.xml
@@ -427,23 +427,42 @@
                         app:backgroundTint="#FCBF48">
                     </Button>
 
+<!--                    <ScrollView-->
+<!--                        android:id="@+id/scrollView"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:scrollbarAlwaysDrawVerticalTrack="true"-->
+<!--                        android:scrollbarFadeDuration="0"-->
+<!--                        android:scrollbarSize="2dp">-->
+
+<!--                        <LinearLayout-->
+<!--                            android:id="@+id/dialog_contain"-->
+<!--                            android:layout_width="match_parent"-->
+<!--                            android:layout_height="match_parent"-->
+<!--                            android:orientation="vertical">-->
+
+<!--                            &lt;!&ndash; include layout_content.xml &ndash;&gt;-->
+
+<!--                        </LinearLayout>-->
+<!--                    </ScrollView>-->
+
                     <ScrollView
-                        android:id="@+id/scrollView"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:scrollbarAlwaysDrawVerticalTrack="true"
-                        android:scrollbarFadeDuration="0"
-                        android:scrollbarSize="2dp">
+                                            android:id="@+id/scrollView"
+                                            android:layout_width="match_parent"
+                                            android:layout_height="wrap_content"
+                                            android:scrollbarAlwaysDrawVerticalTrack="true"
+                                            android:scrollbarFadeDuration="0"
+                                            android:scrollbarSize="2dp">
 
-                        <LinearLayout
-                            android:id="@+id/dialog_contain"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:orientation="vertical">
+                                            <LinearLayout
+                                                android:id="@+id/callnum_contain"
+                                                android:layout_width="match_parent"
+                                                android:layout_height="match_parent"
+                                                android:orientation="vertical">
 
-                            <!-- include layout_content.xml -->
+                                                <!-- include layout_content.xml -->
 
-                        </LinearLayout>
+                                            </LinearLayout>
                     </ScrollView>
 
 <!--                    <EditText-->
