--- a/MyApplication/app/src/main/res/layout/notice_card.xml
+++ b/MyApplication/app/src/main/res/layout/notice_card.xml
@@ -35,36 +35,37 @@
                     android:orientation="vertical">
 
                     <TextView
-                        style="@style/nanumTextView"
-                        android:textSize="17dp"
                         android:id="@+id/notice_name"
+                        style="@style/nanumTextView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="홍길동"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                        android:textSize="17dp" />
 
                     <TextView
-                        style="@style/nanumTextView"
                         android:id="@+id/notice_time"
+                        style="@style/nanumTextView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="2021-07-20 21:00" />
                 </LinearLayout>
+
                 <LinearLayout
-                    android:layout_weight="1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
                     android:layout_gravity="right"
-                    android:gravity="right">
+                    android:layout_weight="1"
+                    android:gravity="right"
+                    android:orientation="horizontal">
 
                     <ImageView
                         android:id="@+id/notice_card_delete"
-                        android:layout_margin="10dp"
-                        android:layout_marginTop="20dp"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
-                        android:src="@drawable/home_board_menu"/>
+                        android:layout_margin="10dp"
+                        android:layout_marginTop="20dp"
+                        android:src="@drawable/home_board_menu" />
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
@@ -75,14 +76,14 @@
             android:background="@color/black" />
 
         <TextView
-            style="@style/nanumTextView"
-            android:textSize="16dp"
             android:id="@+id/notice_board"
+            style="@style/nanumTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
             android:text="\@엄마 오늘 몇시에 오시나요??"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+            android:textSize="16dp" />
 
         <ImageView
             android:id="@+id/notice_image"
@@ -99,19 +100,19 @@
             android:layout_margin="10dp"
             android:orientation="horizontal">
 
-<!--            <ImageView-->
-<!--                android:layout_width="30dp"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_margin="5dp"-->
-<!--                android:src="@drawable/heart" />-->
+            <!--            <ImageView-->
+            <!--                android:layout_width="30dp"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_margin="5dp"-->
+            <!--                android:src="@drawable/heart" />-->
 
-<!--            <TextView-->
-<!--                style="@style/nanumTextView"-->
-<!--                android:id="@+id/notice_heart"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_gravity="center"-->
-<!--                android:text="3" />-->
+            <!--            <TextView-->
+            <!--                style="@style/nanumTextView"-->
+            <!--                android:id="@+id/notice_heart"-->
+            <!--                android:layout_width="wrap_content"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_gravity="center"-->
+            <!--                android:text="3" />-->
 
             <ImageView
                 style="@style/nanumTextView"
