--- a/MyApplication/app/src/main/res/layout/activity_board_content.xml
+++ b/MyApplication/app/src/main/res/layout/activity_board_content.xml
@@ -174,7 +174,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:id="@+id/comment_Layout"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:paddingBottom="15dp"
                     android:orientation="vertical" />
 
