--- a/MyApplication/app/src/main/res/layout/appwidget.xml
+++ b/MyApplication/app/src/main/res/layout/appwidget.xml
@@ -1,4 +1,4 @@
-c<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -22,22 +22,19 @@ c<?xml version="1.0" encoding="utf-8"?>
                 <ImageView
                     android:id="@+id/cu_body_Iv"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/show_sister" />
+                    android:layout_height="match_parent" />
 
             </FrameLayout>
 
             <ImageView
                 android:id="@+id/cu_acc_Iv"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/grandparents" />
+                android:layout_height="match_parent"/>
         </FrameLayout>
 
         <ImageView
             android:id="@+id/cu_eye_Iv"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/heart" />
+            android:layout_height="match_parent"/>
     </FrameLayout>
 </FrameLayout>
